codemirror text mode

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="editor"></div>
     <script>
       var editor = CodeMirror(document.getElementById("editor"), {
-        mode:  "javascript",
+        mode: "text",
         theme: "mdn-like",
         lineNumbers: false
     });
