--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         }
         .CodeMirror-scroll {
           padding-top: 5%;
-          padding-left: 25%;
+          padding-left: 20%;
+          padding-right: 20%;
         }
         html, body {
           height: 100%;
@@ -32,7 +33,8 @@
       var editor = CodeMirror(document.getElementById("editor"), {
         mode: "text",
         theme: "material-darker",
-        lineNumbers: false
+        lineNumbers: false,
+        lineWrapping: true,
     });
 
     editor.setSize("100%", "100%");
