--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kleng</title>
+  <title>kleng</title>
   <style>
     .CodeMirror {
       font-size: 24px;
