--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <style>
     .CodeMirror {
       font-size: 24px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
     }
     .CodeMirror-scroll {
-      padding: 10%;
+      padding-top: 5%;
+      padding-left: 10%;
+      padding-right: 10%;
     }
     html, body {
       height: 100%;
@@ -67,7 +66,7 @@
     updateBackgroundColor(editor.getOption("theme"));
 
     document.addEventListener("keydown", function(event) {
-      var isCtrlBacktick  = (event.ctrlKey || event.metaKey) && event.key === '`';
+      var isCtrlBacktick = (event.ctrlKey || event.metaKey) && event.key === '`';
       if (isCtrlBacktick) {
         event.preventDefault();
         toggleTheme();
