--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Taking App</title>
+    <title>kleng</title>
     <link rel="stylesheet" href="styles.css">
     <script>
         // Immediately set the theme before the page loads
