--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
     </script>
 </head>
 <body>
-    <div id="noteContainer" class="max-w-md mx-auto">
-    </div>
+    <div id="noteContainer" class="max-w-md mx-auto"></div>
 
     <div class="fixed-buttons">
         <button id="themeToggleBtn" class="theme-toggle-btn">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-            </svg>
-        </button>
-        <button id="addNoteBtn" class="add-note-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
             </svg>
         </button>
     </div>
